[project]
name = "EmailUtilities"
version = "44.0"
description = "A set of utility actions to assist with working with emails.  Includes actions to parse EMLs and analyze email headers."
requires-python = ">=3.11,<3.12"
dependencies = [
    "checkdmarc==5.7.11",
    "compressed-rtf",
    "dicttoxml==1.7.16",
    "dkimpy",
    "dnslib==0.9.25",
    "dnspython==2.7.0",
    "eml-parser==2.0.0",
    "extract-msg==0.52.0",
    "file-magic==0.4.1",
    "geocoder==1.38.1",
    "html2text",
    "ioc-fanger==4.2.1",
    "ipwhois==1.3.0",
    "msg-parser==1.2.0",
    "olefile==0.47",
    "oletools==0.60.2",
    "pydnsbl==1.1.7",
    "pycares==4.9.0",
    "pyleri",
    "python-magic>=0.4.27; sys_platform != 'win32'",
    "python-magic-bin>=0.4.14; sys_platform == 'win32'",
    "red-black-tree-mod",
    "requests>=2.32.3",
    "timeout-decorator",
    "tld==0.13",
    "tldextract>=5.3.0",
    "urlextract==1.9.0",
    "netaddr==1.3.0",
    "environmentcommon",
    "tipcommon",
    "setuptools>=80.9.0",
]

[tool.uv.sources]
compressed-rtf = { url = "https://files.pythonhosted.org/packages/8e/ac/abb196bb0b42a239d605fe97c314c3312374749013a07da4e6e0408f223c/compressed_rtf-1.0.6.tar.gz" }
dkimpy = { url = "https://files.pythonhosted.org/packages/f0/6f/84e91828186bbfcedd7f9385ef5e0d369632444195c20e08951b7ffe0481/dkimpy-1.1.8.tar.gz" }
html2text = { url = "https://files.pythonhosted.org/packages/1a/43/e1d53588561e533212117750ee79ad0ba02a41f52a08c1df3396bd466c05/html2text-2024.2.26.tar.gz" }
integration-testing = { path = "../../../../packages/integration_testing_whls/integration_testing-2.2.20-py3-none-any.whl" }
soar-sdk = { git = "https://github.com/chronicle/soar-sdk.git" }
pyleri = { url = "https://files.pythonhosted.org/packages/93/6a/4a2a8a05a4945b253d40654149056ae03b9d5747f3c1c423bb93f1e6d13f/pyleri-1.4.3.tar.gz" }
red-black-tree-mod = { url = "https://files.pythonhosted.org/packages/34/12/944f61bc67a1e918953741c0b3b75a28f96d8060d08fd3614233309ced3b/red-black-tree-mod-1.20.tar.gz" }
timeout-decorator = { url = "https://files.pythonhosted.org/packages/80/f8/0802dd14c58b5d3d72bb9caa4315535f58787a1dc50b81bbbcaaa15451be/timeout-decorator-0.5.0.tar.gz" }

tipcommon = { path = "../../../../packages/tipcommon/TIPCommon-2.2.20/TIPCommon-2.2.20-py2.py3-none-any.whl" }
environmentcommon = { path = "../../../../packages/envcommon/EnvironmentCommon-1.0.2/EnvironmentCommon-1.0.2-py2.py3-none-any.whl" }
[dependency-groups]
dev = [
    "integration-testing",
    "pytest-json-report>=1.5.0",
    "pytest>=8.3.5",
    "soar-sdk",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
