[project]
name = "TemplateEngine"
version = "20.0"
description = "Template Engine integration provides the ability to render templates using Jinja2. Jinja2 provide fast and flexible ways to create rich templates. These templates can be used in entity insights, emails, ticketing systems, or any action that can take in a text string.\nJinja2 documentation can be found at https://jinja.palletsprojects.com/en/2.11.x/ "
requires-python = ">=3.11,<3.12"
dependencies = [
    "jinja2==3.1.6",
    "json2html",
    "json2table==1.1.5",
    "python-dateutil>=2.9.0.post0",
    "six==1.17.0",
    "setuptools>=80.9.0",
]

[tool.uv.sources]
soar-sdk = { git = "https://github.com/chronicle/soar-sdk.git" }
integration-testing = { path = "../../../../packages/integration_testing_whls/integration_testing-2.2.7-py3-none-any.whl" }
json2html = { url = "https://files.pythonhosted.org/packages/01/d5/40b617ee19d2d79f606ed37f8a81e51158f126d2af67270c68f2b47ae0d5/json2html-1.3.0.tar.gz" }

tipcommon = { path = "../../../../packages/tipcommon/TIPCommon-2.2.7/TIPCommon-2.2.7-py2.py3-none-any.whl" }
environmentcommon = { path = "../../../../packages/envcommon/EnvironmentCommon-1.0.2/EnvironmentCommon-1.0.2-py2.py3-none-any.whl" }
[dependency-groups]
dev = [
    "environmentcommon",
    "integration-testing",
    "pytest-json-report>=1.5.0",
    "pytest>=8.3.5",
    "soar-sdk",
    "tipcommon",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
